# mad_detector

./: .gitignore  CMakeLists.txt  README.md  get_models_v1.sh  package.xml  requirements.txt  setup.py
include/: yolo.hpp  yolo_ov.hpp
launch/: start.launch  start_test.launch  start_test_bag.launch  test_detector.launch
msg/: Detection.msg
samples/: .directory
scripts/: test_detector.py
src/: main.cpp  main_dir_predict.cpp  yolo.cpp  yolo_ov.cpp
src/mad_detector/: detector.py  yolo_infer.py
src/mad_detector/models/: __init__.py  common.py  yolo4tiny.py
train/: .gitignore  requirements.txt  train.py  transform.py
train/configs/: rf_v4tiny_full.yml
training/: .env  .gitignore  common.yml
training/scripts/: continue_training.sh  start_demo.sh  train.sh
training/src/: demo.py  gen_anchors.py  train.py  transform.py
